--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,10 @@
 			"type": "ev3devBrowser",
 			"request": "launch",
 			// "program": "/home/robot/${workspaceRootFolderName}/Benchpart2.py",
-			// "program": "/home/robot/${workspaceRootFolderName}/final_run.py",
-			//"program": "/home/robot/${workspaceRootFolderName}/speak.py",
-			"program": "/home/robot/${workspaceRootFolderName}/new_missions.py",
+			//"program": "/home/robot/${workspaceRootFolderName}/final_run.py",
+			//"program": "/home/robot/${workspaceRootFolderName}/3. bench_part2.py",
+			//"program": "/home/robot/${workspaceRootFolderName}/new_missions.py",
+			"program": "/home/robot/${workspaceRootFolderName}/R0_master.py",
 			"interactiveTerminal": false
 		}
 	]
